@@ -27,11 +27,6 @@ BzfWindow::~BzfWindow()
 {
 }
 
-void BzfWindow::setFullscreen(bool on) {
-  if (on)
-    setFullscreen();
-}
-
 void			BzfWindow::callExposeCallbacks() const
 {
   const int count = exposeCallbacks.size();
